--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,31 @@
-baseURL = "http://example.org/"
+baseURL = "http://localhost:1313/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Lập trình gia"
+enableRobotsTXT = true
+enableEmoji = true
+theme = "black-and-light"
+
+[params]
+  # Enables syntax highlighting
+  highlight = true 
+
+  # Supports highlighting for languages not included in the original pack
+  # See https://highlightjs.org/download/ for what's included in original pack
+  # For reference to all languages, see:
+  # https://github.com/isagalaev/highlight.js/tree/master/src/languages
+  hjslangs = ["go", "vim"]
+
+  # Enables the topmenu, which pulls from categories
+  topmenu = "categories"
+
+# Builds a list page for each category given
+[taxonomies]
+  tag = "tags"
+  category = "categories"
+
+[author]
+  name = "Nguyen Quang hung"
+  github = "hungneox"
+  email = "hungnq1989@gmail.com"
+  gaid = "Your Google Analytics ID"
+  twitter = "hungneox"
