--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "Lập trình gia"
 enableRobotsTXT = true
 enableEmoji = true
-theme = "HugoMDL"
+theme = "black-and-light"
 MetaDataFormat = "yaml"
 
 [params]
