--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL = "http://localhost:1313/"
+baseURL = "http://ltv.netlify.com/"
 languageCode = "en-us"
-title = "Lập trình gia"
+title = "Lập trình viên"
 enableRobotsTXT = true
 enableEmoji = true
 theme = "black-and-light"
@@ -19,20 +19,9 @@ MetaDataFormat = "yaml"
   # Enables the topmenu, which pulls from categories
   topmenu = "categories"
   author = "Hung Nguyen"
-  avatar = "/images/avatar.png"
-  background = "/images/background.jpg"
-  description = "A place to publish my incomprehensible ramblings" #meta description
-  image = "/images/avatar-192x210.png" #for frontpage profile card
-  mdlPrimary = "grey"
-  mdlSecondary = "orange"
-  website = "hungneox.com"
   email = "hungneox@gmail.com"
-  twitter = "https://twitter.com/hungnq1989"
-  github = "https://github.com/hungnq1989/"
-  linkedin = "https://linkedin.com/in/hungnq1989/"
-  facebook = "https://facebook.com/hungnq1989/"
+  github = "https://github.com/hungneox/"
   copyrightyear = "2018"
-  frontpageposts = 6 #number of post cards to display on frontpage
 
 # Fully customizable header menu
 [[menu.main]]
@@ -56,10 +45,3 @@ MetaDataFormat = "yaml"
 [taxonomies]
   tag = "tags"
   category = "categories"
-
-[author]
-  name = "Nguyen Quang hung"
-  github = "hungneox"
-  email = "hungnq1989@gmail.com"
-  gaid = "Your Google Analytics ID"
-  twitter = "hungneox"
